@@ -1,4 +1,7 @@
 
+=== (next) ===
+NEW: auto fallback to "-internal" credentials for internal comms
+
 === 1.3.1 (2017-08-11) ===
 BREAKING: dropped Node,js < v6 support
 BREAKING: no-response requests execute in same AsyncSteps now
